odoo-deployment.yml
kind: Deployment
apiVersion: "apps/v1"
metadata:
  name: odoo-shop
spec:
  
  replicas: 1
  selector:
    matchLabels:
      component: odoo-shop
  template:
    metadata:
      labels:
        component: odoo-shop
    spec:
      containers:
        - image: odoo:12.0
          name: odoo-shop
          securityContext:
            privileged: true
            runAsUser: 0
          ports:
            - containerPort: 8069
              name: odoo
          volumeMounts:
          - name: odoo-pvc
            mountPath: /var/lib/odoo
      volumes:
      - name: odoo-pvc
        persistentVolumeClaim:
          claimName: odoo-pvc
