postgres-deployment.yml
kind: Deployment
apiVersion: "apps/v1"
metadata:
  name: odoo-db
spec:
  
  replicas: 1
  selector:
    matchLabels:
      component: odoo-db
  template:
    metadata:
      labels:
        component: odoo-db
    spec:
      containers:
      - image: postgres:9.4
        name: odoo-db
        ports:
        - containerPort: 5432
          name: odoo-db
        volumeMounts:
        - name: odoo-db-pvc
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: odoo-db-pvc
        persistentVolumeClaim:
          claimName: odoo-db-pvc
