odoo-external-service.yml
kind: Service
apiVersion: v1
metadata:
  name: odoo-external-service
  labels:
    component: odoo-shop
spec:
  type: NodePort
  ports:
    # Se enlaza el puerto 4200 del contenedor Crate con el 31200 del ordenador
  - port: 8069
  selector:
    # Se aplica en enlace de puertos al componente de crate
    component: odoo-shop
