odoo.yaml
---
kind: Namespace
apiVersion: v1
metadata:
  name: odoo
  labels:
    name: odoo
---
apiVersion: v1
kind: Service
metadata:
  name: odoo-db
  namespace: odoo
  labels:
    app: odoo-shop
spec:
  ports:
    - port: 5432
  selector:
    app: odoo-shop
    tier: backend
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: odoo-db
  namespace: odoo
  labels:
    app: odoo-shop
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: odoo-shop
  template:
    metadata:
      labels:
        app: odoo-shop
        tier: backend
    spec:
      containers:
      - image: postgres:9.4
        name: odoo-db
        ports:
        - containerPort: 5432
          name: odoo-db
        volumeMounts:
        - name: odoo-db-pvc
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: odoo-db-pvc
        persistentVolumeClaim:
          claimName: odoo-db-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: odoo-shop
  namespace: odoo
  labels:
    app: odoo-shop
spec:
  ports:
    - port: 8069
  selector:
    app: odoo-shop
    tier: frontend
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: odoo-shop
  namespace: odoo
  labels:
    app: odoo-shop
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: odoo-shop
  template:
    metadata:
      labels:
        app: odoo-shop
        tier: frontend
    spec:
      containers:
        - image: codeflavor/odoo-docker:latest
          name: odoo-shop
          securityContext:
            privileged: true
            runAsUser: 0
          ports:
            - containerPort: 8069
              name: odoo
          volumeMounts:
          - name: odoo-pvc
            mountPath: /var/lib/odoo
      volumes:
      - name: odoo-pvc
        persistentVolumeClaim:
          claimName: odoo-pvc
