ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-tutorial
  namespace: odoo
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
  - host: ec2-3-234-208-201.compute-1.amazonaws.com
    http:
      paths:
      - path: /
        backend:
          serviceName: odoo-shop
          servicePort: 8069
